styles.css
/*
  1. Use a more-intuitive box-sizing model.
*/
*, *::before, *::after {
    box-sizing: border-box;
  }
  /*
    2. Remove default margin
  */
  * {
    margin: 0;
  }
  /*
    Typographic tweaks!
    3. Add accessible line-height
    4. Improve text rendering
  */
  body {
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
  }
  /*
    5. Improve media defaults
  */
  img, picture, video, canvas, svg {
    display: block;
    max-width: 100%;
  }
  /*
    6. Remove built-in form typography styles
  */
  input, button, textarea, select {
    font: inherit;
  }
  /*
    7. Avoid text overflows
  */
  p, h1, h2, h3, h4, h5, h6 {
    overflow-wrap: break-word;
  }
  /*
    8. Create a root stacking context
  */
  #root, #__next {
    isolation: isolate;
  }

body{
    display:grid;
    grid-template-columns:minmax(150px,0.8fr) 4fr;
}
.sidebar{
  background-color: #0ea5e9;
  color:white;
  padding-left:3ch;
}
.sidebar img{
  height:1em;
  justify-self: start;
}
nav.profile,
nav.help{
  font-size:1em;
  margin-top:5ch;
}
.dashboard{
  font-size:1.5em;
  margin:1ch 0;
}
.sidebar div{
  display:grid;
  align-items: center;
  justify-content: start;
  grid-template-columns: minmax(30px,3ch) minmax(300px,10%);
  gap:0.5em;
}
.header{
  background-color: white;
}
form{
  background-color:#d4d5da;
  max-width:80%;
  height:2em;
  border-radius:5px;
  flex-direction:row;
  display:flex;
  align-items: center;
  flex:1;
}
input{
  all:unset;
  font:16px system-ui;
  color:#fff;
  height:100%;
  width:100%;
  padding: 6px 10px;
}
::placeholder{
  color:#fff;
  opacity:0.7;
}
button>svg{
  color:#fff;
  fill:currentColor;
  width:24px;
  height:100%;
}
button{
  all:unset;
  cursor:pointer;
  height:100%;
}
.searchbar{
  display:flex;
  height: 4em;
  align-items: center;
  padding:0 10ch;
  justify-content: space-between;
  gap:3ch;
}
.accountIcon>svg{
  width:24px;
  height: 100%;
}
.searchbar .accountIcon{
  display:flex;
  align-items:center;
  gap:3ch;
}
.accountIcon>img{
  border-radius: 30px;
  height:2em;
}
.accountMenu img{
  height: 4em;
  border-radius:50%;
  display:block;
}
.account-group{
  display:flex;
  gap:2ch;
  align-items: center;
  flex:1;
  justify-content: space-between;
}
.accountName>div:nth-child(2){
  font-weight: 800;
  font-size:1.5em;
  margin-bottom:1ch;
}
.accountMenu{
  align-items: center;
  padding:0 10ch;
  width:100%;
}
div.share>button{
  background-color: #0ea5e9;
  color:white;
  border-radius: 20px;
  height:2em;
  width:5em;
  margin:0 1ch;
}
div.share{
  text-align: center;
  justify-self: end;
}
.main-container{
  grid-template-columns: 1fr;
  grid-template-rows:1fr 5fr;
}
.projects{
  background-color: #d4d5da;
  display:grid;
  grid-template-columns: 4fr 1fr;
  padding-top:2ch;
}

.projectIdeas{
  display:grid;
  grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
  grid-auto-rows: 1fr;
}
#intro{
  display:flex;
}
.account-group div{
  margin-left:1ch;
}
.idea{
  background-color: white;
  margin:2ch;
  border-radius: 5px;
  padding:2ch 2ch 5ch 2ch;
  border-left:0.5rem solid #fbbf24;
  position:relative;
  div.title{
    font-weight: 800;
  }
}
.shareOptions{
  display:flex;
  height:3ch;
  gap:2ch;
  position:absolute;
  right:0;
  bottom:0;
}
.rightContainer{
  grid-row:1/2;
  grid-column:2/3;
  display: grid;
  grid-template-rows:1fr 1fr;
}
.updates{
  display:grid;
  background-color: white;
  border-radius:5px;
  margin:2ch;
  padding:1ch;
  >div{
    padding:1ch;
    border-bottom:1px solid #e0e0e0;
  }
  >div:last-child{
    border:none;
  }
}
.updateContent{
  font-size:0.8em;
}
.trendingAccounts{
  background-color: white;
  display:grid;
  grid-template-rows: repeat(4,1fr);
  border-radius:5px;
  margin:2ch;
  padding:1ch;
  .account{
    display:grid;
    grid-template-columns: min(50px,30%) 150px;
    grid-template-rows:1fr 1fr;
    justify-content: center;
  }
}
.leftContainer>div:first-child{
  margin-left:3ch;
  font-weight:800;
}
.account>.accountIcon{
  grid-row:1/-1;
  align-self: center;
  margin-right:2ch;
  position:relative;
  right:2em;
  img{
    height:100%;
  }
}

